--- a/lib/do_it_shop_web/controllers/page_html/home.html.heex
+++ b/lib/do_it_shop_web/controllers/page_html/home.html.heex
@@ -1,6 +1,11 @@
 <.flash_group flash={@flash} />
+<div class="container pb-2">
+  <div class="prose">
+    <h2>Dashboard</h2>
+  </div>
+</div>
 
-<div class="">
+<div class="bg-base-100 container rounded-xl p-8 shadow">
   <button class="btn ">Create Quote</button>
   <button class="btn ">Enter Timeclock Mode</button>
 </div>
