--- a/lib/do_it_shop_web/components/layouts/app.html.heex
+++ b/lib/do_it_shop_web/components/layouts/app.html.heex
@@ -1,4 +1,4 @@
-<main class="px-4 py-6 sm:px-6 lg:px-8">
+<main class="">
   <div class="">
     <.flash_group flash={@flash} />
     <%= @inner_content %>
