--- a/lib/do_it_shop_web/components/layouts/root.html.heex
+++ b/lib/do_it_shop_web/components/layouts/root.html.heex
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class=" [scrollbar-gutter:stable]" data-theme="light">
+<html lang="en" class=" light [scrollbar-gutter:stable]" data-theme="light">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -110,8 +110,8 @@
         <% end %>
       </ul>
     </div>
-    <div class="flex-grow w-full max-h-screen min-h-screen p-5 overflow-y-auto bg-base-200 ">
-      <div class="">
+    <div class="bg-base-200 max-h-screen min-h-screen w-full flex-grow overflow-y-auto p-5 ">
+      <div class="px-4 py-6 sm:px-6 lg:px-8">
         <%= @inner_content %>
       </div>
     </div>
