--- a/lib/do_it_shop_web/components/layouts/root.html.heex
+++ b/lib/do_it_shop_web/components/layouts/root.html.heex
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="light [scrollbar-gutter:stable]" data-theme="light">
+<html lang="en" class="bg-base-200 light [scrollbar-gutter:stable]" data-theme="light">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,7 +13,7 @@
   </head>
   
   <body class="flex antialiased">
-    <div class="min-w-[270px] max-w-[270px] flex max-h-screen min-h-screen flex-col justify-between overflow-y-auto">
+    <div class="bg-base-100 min-w-[270px] max-w-[270px] flex max-h-screen min-h-screen flex-col justify-between overflow-y-auto">
       <div>
         <div class="flex gap-2 px-5 pt-5 text-sm font-bold ">
           <.icon name="hero-cube" /> Do It Shop
