support for custom icons

--- a/lib/do_it_shop_web/components/layouts/root.html.heex
+++ b/lib/do_it_shop_web/components/layouts/root.html.heex
@@ -22,7 +22,7 @@
               <.icon name="hero-bars-3" />
             </label>
             
-            <h2 class="text-sm font-bold lg:hidden"><.icon name="hero-cube" /> Do It Shop</h2>
+            <h2 class="text-sm font-bold lg:hidden"><.icon name="custom-hammer" /> Do It Shop</h2>
           </div>
           
           <div>
@@ -41,8 +41,8 @@
         <label for="my-drawer-2" aria-label="close sidebar" class="drawer-overlay"></label>
         <div class="bg-base-100 flex max-h-screen min-h-screen flex-col justify-between overflow-y-auto lg:min-w-[270px]">
           <div>
-            <div class="flex gap-2 px-5 pt-5 text-sm font-bold ">
-              <.icon name="hero-cube" /> Do It Shop
+            <div class="flex gap-2 px-6 pt-5 text-sm font-bold ">
+              <.icon name="custom-hammer" /> Do It Shop
             </div>
             
             <ul class="menu ">
