--- a/lib/do_it_shop_web/components/layouts/root.html.heex
+++ b/lib/do_it_shop_web/components/layouts/root.html.heex
@@ -37,7 +37,6 @@
                   <li>
                     <.link
                       href={~p"/users/settings"}
-                      current_path={@conn.request_path}
                       active_class="text-purple-500"
                       class="text-sm font-semibold leading-6 "
                     >
@@ -47,7 +46,7 @@
                   
                   <li>
                     <.link
-                      navigate={~p"/users/log_out"}
+                      href={~p"/users/log_out"}
                       method="delete"
                       class="text-sm font-semibold leading-6 "
                     >
@@ -72,24 +71,47 @@
           </div>
         </div>
         
-        <div class="h-[calc(100vh-65px)] max-w-[100vw] w-full overflow-y-auto ">
+        <div class="h-[calc(100vh-65px)] max-w-[100vw] main-content w-full overflow-y-auto">
           <div class="p-3 sm:p-4 md:p-8">
             <%= @inner_content %>
           </div>
+           <%!-- Footer --%>
+          <footer class="footer bg-base-300 min-h-[50vh] p-10 dark:text-neutral-content">
+            <nav>
+              <header class="footer-title">Services</header>
+               <a class="link link-hover">Branding</a> <a class="link link-hover">Design</a>
+              <a class="link link-hover">Marketing</a>
+              <a class="link link-hover">Advertisement</a>
+            </nav>
+            
+            <nav>
+              <header class="footer-title">Company</header>
+               <a class="link link-hover">About us</a> <a class="link link-hover">Contact</a>
+              <a class="link link-hover">Jobs</a> <a class="link link-hover">Press kit</a>
+            </nav>
+            
+            <nav>
+              <header class="footer-title">Legal</header>
+               <a class="link link-hover">Terms of use</a>
+              <a class="link link-hover">Privacy policy</a>
+              <a class="link link-hover">Cookie policy</a>
+            </nav>
+          </footer>
+           <%!-- Footer --%>
         </div>
       </div>
       
-      <div class="drawer-side">
+      <div class="drawer-side z-[2]">
         <label for="my-drawer-2" aria-label="close sidebar" class="drawer-overlay"></label>
         <div class="bg-base-100 min-w-[270px] flex max-h-screen min-h-screen flex-col justify-between overflow-y-auto">
           <div>
-            <div class="flex gap-2 px-6 pt-5 text-sm font-bold ">
+            <div class="flex gap-2 px-6 pt-8 pb-6 text-sm font-bold ">
               <.icon name="custom-hammer" class="text-secondary" /> Do It Shop
             </div>
             
             <ul class="menu ">
               <li>
-                <.nav_link navigate={~p"/"} current_path={@conn.request_path} exact={true}>
+                <.nav_link navigate={~p"/"} exact={true}>
                   <.icon name="hero-home" />Dashboard
                 </.nav_link>
               </li>
@@ -112,8 +134,13 @@
                   <ul>
                     <li><a>Projects</a></li>
                     
-                    <%!-- <li><a>Tasks</a></li>
-                <li><a>Inventory</a></li>
+                    <li>
+                      <.nav_link navigate={~p"/tasks"}>
+                        Tasks
+                      </.nav_link>
+                    </li>
+                    
+                    <%!-- <li><a>Inventory</a></li>
                 <li><a>Materials</a></li> --%>
                   </ul>
                 </details>
@@ -135,7 +162,7 @@
                   
                   <ul>
                     <li>
-                      <.nav_link navigate={~p"/employees"} current_path={@conn.request_path}>
+                      <.nav_link navigate={~p"/employees"}>
                         Employees
                       </.nav_link>
                     </li>
