--- a/lib/do_it_shop_web/components/layouts/root.html.heex
+++ b/lib/do_it_shop_web/components/layouts/root.html.heex
@@ -135,9 +135,35 @@
                     <li><a>Projects</a></li>
                     
                     <li>
-                      <.nav_link navigate={~p"/tasks"}>
-                        Tasks
-                      </.nav_link>
+                      <div class="nav-link flex">
+                        <.nav_link
+                          navigate={~p"/tasks"}
+                          class="flex-grow w-full"
+                          active_class="active-nav"
+                        >
+                          Tasks
+                        </.nav_link>
+                        
+                        <div class="flex gap-2">
+                          <.nav_link
+                            exact
+                            navigate={~p"/tasks"}
+                            class=""
+                            active_class="text-secondary"
+                          >
+                            <.icon name="hero-list-bullet" />
+                          </.nav_link>
+                          
+                          <.nav_link
+                            exact
+                            navigate={~p"/tasks/board"}
+                            class=""
+                            active_class="text-secondary"
+                          >
+                            <.icon name="hero-view-columns" />
+                          </.nav_link>
+                        </div>
+                      </div>
                     </li>
                     
                     <%!-- <li><a>Inventory</a></li>
